2010-06-30  Jan Hubicka  <jh@suse.cz>

	Backport from mainline
	2010-06-27  Jan Hubicka  <jh@suse.cz>

	PR middle-end/44671
	PR middle-end/44686
	* tree.c (build_function_decl_skip_args): Clear DECL_BUILT_IN on
	signature change.
	* ipa-split.c (split_function): Always clear DECL_BUILT_IN.
	* ipa-prop.c (ipa_modify_formal_parameters): Likewise.

	2010-06-28  Jan Hubicka  <jh@suse.cz>

	PR tree-optimization/44357
	* ipa-inline.c (add_new_edges_to_heap): Do not add edges to uninlinable
	functions.

2010-06-30  Jakub Jelinek  <jakub@redhat.com>

	Backport from mainline
	2010-06-30  Jakub Jelinek  <jakub@redhat.com>

	PR debug/44694
	* cselib.h (cselib_preserve_cfa_base_value): Add regno argument.
	* cselib.c (cfa_base_preserved_regno): New static variable.
	(cselib_reset_table): Don't reset cfa_base_preserved_regno instead
	of REGNO (cfa_base_preserved_val->locs->loc).
	(cselib_preserve_cfa_base_value): Add regno argument, set
	cfa_base_preserved_regno to it.
	(cselib_invalidate_regno): Allow removal of registers other than
	cfa_base_preserved_regno from cfa_base_preserved_val.
	(cselib_finish): Set cfa_base_preserved_regno to INVALID_REGNUM.
	* var-tracking.c (adjust_mems): Replace sp or hfp even outside
	of MEM addresses, if not on LHS.
	(reverse_op): Don't add reverse ops for cfa_base_rtx.
	(vt_init_cfa_base): Adjust cselib_preserve_cfa_base_value caller.

	2010-06-25  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/43866
	* tree-ssa-loop-unswitch.c (tree_may_unswitch_on): If stmt is always
	true or always false, return NULL_TREE.
	(tree_unswitch_single_loop): Optimize conditions even when reaching
	max-unswitch-level parameter.  If num > 0, optimize first all conditions
	using entry checks, then do still reachable block discovery and consider
	only conditions in still reachable basic blocks in the loop.

	2010-05-12  Jakub Jelinek  <jakub@redhat.com>

	PR debug/42278
	* dwarf2out.c (base_type_die): Don't add name attribute here.