@@ -1,3 +1,14 @@
+2010-07-01  Jakub Jelinek  <jakub@redhat.com>
+
+	Backport from mainline
+	2010-06-21  Jakub Jelinek  <jakub@redhat.com>
+ 
+	PR target/44575
+	* config/i386/i386.c (ix86_gimplify_va_arg): When copying
+	va_arg from a set of register save slots into a temporary,
+	if the container is bigger than type size, do the copying
+	using smaller mode or using memcpy.
+
 2010-06-30  Jan Hubicka  <jh@suse.cz>
 
 	Backport from mainline
